# neotlc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
atlc/atlc-4.6.1/: Makefile  README  config.h  config.status
atlc/atlc-4.6.1/docs/: Makefile
atlc/atlc-4.6.1/docs/html-docs/: Makefile
atlc/atlc-4.6.1/docs/html-docs/jpgs/: Makefile
atlc/atlc-4.6.1/docs/qex-december-1996/: Makefile
atlc/atlc-4.6.1/docs/theory/: Makefile
atlc/atlc-4.6.1/examples/: Makefile
atlc/atlc-4.6.1/m4/: Makefile
atlc/atlc-4.6.1/man/: Makefile
atlc/atlc-4.6.1/man/man1/: Makefile
atlc/atlc-4.6.1/src/: Makefile
atlc/atlc-4.6.1/src/.deps/: align_bitmap_image.Po  atlc-atlc.Po  atlc-calculate_colour_data.Po  atlc-check_for_boundaries.Po  atlc-check_for_shorts.Po  atlc-do_fd_calculation.Po  atlc-exit_with_msg_and_exit_code.Po  atlc-find_electric_fields.Po  atlc-find_energy_per_metre.Po  atlc-find_maximum_values.Po  atlc-finite_difference_multi_threaded.Po  atlc-finite_difference_single_threaded.Po  atlc-get_file_pointer_with_right_filename.Po  atlc-get_options.Po  atlc-memory.Po  atlc-print_copyright.Po  atlc-print_data_for_directional_couplers.Po  atlc-print_data_for_two_conductor_lines.Po  atlc-read_bitmap_file_headers.Po  atlc-set_data_to_sensible_starting_values.Po  atlc-set_oddity_from_Greens_paper.Po  atlc-setup_arrays.Po  atlc-swap_conductor_voltages.Po  atlc-update_voltage_array.Po  atlc-usage_atlc.Po  atlc-write_fields_for_directional_couplers.Po  atlc-write_fields_for_two_conductor_lines.Po  byteswap.Po  calculate_impedance_for_create_bmp_for_symmetrical_stripline.Po  check_error.Po  check_parameters_for_find_optimal_dimensions_for_microstrip_coupler.Po  check_parameters_of_create_bmp_for_circ_in_circ.Po  check_parameters_of_create_bmp_for_circ_in_rect.Po  check_parameters_of_create_bmp_for_microstrip_coupler.Po  check_parameters_of_create_bmp_for_rect_in_circ.Po  check_parameters_of_create_bmp_for_rect_in_rect.Po  convert_create_bmp_for_circ_in_circ_dimensions_to_integers.Po  convert_create_bmp_for_circ_in_rect_dimensions_to_integers.Po  convert_create_bmp_for_coupled_microstrip_dimensions_to_integers.Po  convert_create_bmp_for_rect_in_circ_dimensions_to_integers.Po  (+60 more)
atlc/atlc-4.6.1/tests/: Makefile
atlc/atlc-4.6.1/tools/: Makefile
atlc/atlc-4.6.1/tools/src/: Makefile
atlc/atlc-4.6.1/tools/src/.deps/: coax.Po  dualcoax.Po  get_options.Po  locatediff.Po  myfilelength.Po  mymd5sum.Po  usage_coax.Po
atlc/include/: atlc.h
src/: atlc_wrapper.h  helloworld.cpp  main.cpp  stackup_definition.cpp  stackup_definition.h  window.cpp  window.h
